2007-05-10 Franz Holzinger  <kontakt@fholzinger.com>
	* use t3lib_htmlmail also for sending of plain text emails
	* fix bugs with invite (see bug #5588)
	* Version 2.5.6 relaunch

2007-05-02 Franz Holzinger  <kontakt@fholzinger.com>
	* Danish backend texts
	* fix bug with not possible image upload
	* Version 2.5.6 relaunch

2007-04-18 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.6 relaunch

2007-03-15 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.6 relaunch
	* fix bugs caused by restructuring of code

2007-03-09 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.6 relaunch
	* more flexform entries
	* fix bugs caused by restructuring of code

2007-03-06 Franz Holzinger  <kontakt@fholzinger.com>
	* some bug fixes due to restructuring

2007-02-28 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.6
	* internal restructuring of code into more classes

2007-02-09 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.5 relaunch
	* Fix bug 4056: The comparison of the authorisation code has been wrong.

2007-02-07 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.5 relaunch
	* Fix bug with not considered multiple select fields with text fields. A text string must be allowed as a value in a select box.

2007-01-17 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.5
	* enable overrideValues setup with stdWrap function call - by Jens Hirschfeld <Jens.Hirschfeld@KeepOut.de>
	* If useEmailAsUsername is set, and the user changes their email address, the username will also be changed.
	* automatic password generation by Dennis S. Hennen <dennis@28studios.com>
	* Ralph Brugger <Ralph.Brugger@linkpool.de> added captcha feature

2006-12-29 Franz Holzinger  <kontakt@fholzinger.com>
	* Version 2.5.4
	* enable always INFOMAIL when function compileMail has been reached
	* message for lost password is possible: v_registration_infomail_message1
	* split pi1/locallang.xml into separate files for each language in l10n/pi1
