@@ -169,14 +169,15 @@
 			<label index="missing_company">Please enter the name of your company!</label>
 			<label index="missing_company_informal">Please enter the name of your company!</label>
 			<label index="missing_invitation_company">Please enter the name of a company!</label>
-			<label index="www">Homepage:</label>
+			<label index="www">Web site:</label>
 			<label index="tooltip_www">Enter the address of your homepage.</label>
-			<label index="tooltip_www_informal">Enter the address of your homepage.</label>
-			<label index="tooltip_invitation_www">Enter the address of the homepage of the invited person.</label>
-			<label index="missing_www">Please enter the address of your homepage!</label>
-			<label index="missing_www_informal">Please enter the address of your homepage!</label>
-			<label index="missing_invitation_www">Please enter a homepage address!</label>
-			<label index="evalErrors_wwwURL_www">According to our verifications, the homepage address you entered is not valid. Perhaps it was not entered correctly?</label>
+			<label index="tooltip_www">Enter the address of your website.</label>
+			<label index="tooltip_www_informal">Enter the address of your website.</label>
+			<label index="tooltip_invitation_www">Enter the address of the website of the invited person.</label>
+			<label index="missing_www">Please enter the address of your website!</label>
+			<label index="missing_www_informal">Please enter the address of your website!</label>
+			<label index="missing_invitation_www">Please enter a website address!</label>
+			<label index="evalErrors_wwwURL_www">According to our verifications, the website address you entered is not valid. Perhaps it was not entered correctly?</label>
 			<label index="image">Photographs:</label>
 			<label index="tooltip_image">Enter the path and name of a file or click on the button to browse the files on your computer.</label>
 			<label index="tooltip_image_informal">Enter the path and name of a file or click on the button to browse the files on your computer.</label>
@@ -277,14 +278,14 @@
 			<label index="v_follow_instructions_review2_informal">Please be aware that after you confirm your registration, it will need to be reviewed by the administrator before you gain access to the section &lt;b&gt;%1$s&lt;/b&gt; of our website.</label>
 			<label index="v_registration_initiated_subject">Please confirm your registration with &lt;b&gt;%1$s&lt;/b&gt;.</label>
 			<label index="v_registration_initiated_subject_informal">Please confirm your registration with &lt;b&gt;%1$s&lt;/b&gt;.</label>
-			<label index="v_registration_initiated_message1">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br&gt;&lt;br&gt;To confirm your membership please click on this link:</label>
-			<label index="v_registration_initiated_message1_informal">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br&gt;&lt;br&gt;To confirm your membership please click on this link:</label>
+			<label index="v_registration_initiated_message1">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br&gt;&lt;br&gt;\nTo confirm your membership please click on this link:</label>
+			<label index="v_registration_initiated_message1_informal">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br&gt;&lt;br&gt;\nTo confirm your membership please click on this link:</label>
 			<label index="v_registration_initiated_message2">If, for any reason, you do not wish to continue the registration process, or you have received this message in error, please click on this link:</label>
 			<label index="v_registration_initiated_message2_informal">If, for any reason, you do not wish to continue the registration process, or you have received this message in error, please click on this link:</label>
 			<label index="v_registration_initiated_message3">Please feel free to ask us any questions, or  tell us anything about the registration process, or make any other constructive comments by sending an e-mail to:</label>
 			<label index="v_registration_initiated_message3_informal">Please feel free to ask us any questions, or  tell us anything about the registration process, or make any other constructive comments by sending an e-mail to:</label>
-			<label index="v_registration_initiated_review1">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br&gt;&lt;br&gt;To confirm your membership please click on this link:</label>
-			<label index="v_registration_initiated_review1_informal">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br&gt;&lt;br&gt;To confirm your membership please click on this link:</label>
+			<label index="v_registration_initiated_review1">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br&gt;&lt;br&gt;\nTo confirm your membership please click on this link:</label>
+			<label index="v_registration_initiated_review1_informal">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br&gt;&lt;br&gt;\nTo confirm your membership please click on this link:</label>
 			<label index="v_registration_initiated_review2">Please be aware that after you confirm your registration, it will need to be reviewed by the administrator before you gain access to the section &lt;b&gt;%1$s&lt;/b&gt; of our website.</label>
 			<label index="v_registration_initiated_review2_informal">Please be aware that after you confirm your registration, it will need to be reviewed by the administrator before you gain access to the section &lt;b&gt;%1$s&lt;/b&gt; of our website.</label>
 			<label index="v_registration_initiated">%3$s initiated his(her) registration in %1$s.</label>
